--- a/maven-training-java/pom.xml
+++ b/maven-training-java/pom.xml
@@ -4,16 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>sk.cde.training</groupId>
-    <artifactId>maven-training-parent</artifactId>
+    <artifactId>maven-training-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
-	
-	<modules>
-		<module>maven-training-java</module>
-        <module>maven-training-web</module>
-	</modules>
+    <packaging>jar</packaging>
+
+    <parent>
+        <artifactId>maven-training-parent</artifactId>
+        <groupId>sk.cde.training</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
