--- a/maven-training-web/pom.xml
+++ b/maven-training-web/pom.xml
@@ -5,19 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sk.cde.training</groupId>
-    <artifactId>maven-training-parent</artifactId>
+    <artifactId>maven-training-web</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
-	
-	<modules>
-		<module>maven-training-java</module>
-        <module>maven-training-web</module>
-	</modules>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <java.version>18</java.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
