--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>sk.cde.training</groupId>
-    <artifactId>maven-training-parent</artifactId>
+    <groupId>sk.cde.training0923</groupId>
+    <artifactId>maven-parent-0923</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
-	
+
 	<modules>
-		<module>maven-training-java</module>
-        <module>maven-training-web</module>
+		<module>maven-java-0923</module>
+        <module>maven-web-0923</module>
 	</modules>
 
     <properties>
@@ -20,4 +20,32 @@
         <maven.compiler.target>18</maven.compiler.target>
         <java.version>18</java.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>3.8.1</version>
+                <scope>test</scope>
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>org.hamcrest</groupId>-->
+<!--                        <artifactId>hamcrest-core</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>3.0.5.RELEASE</version>
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>commons-logging</groupId>-->
+<!--                        <artifactId>commons-logging</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
