--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <java.version>18</java.version>
+
+        <enforcer.skip>true</enforcer.skip>
+        <enforcerSkipHelloWorld>${enforcer.skip}</enforcerSkipHelloWorld>
+        <enforcerSkipCommonsLogging>${enforcer.skip}</enforcerSkipCommonsLogging>
     </properties>
 
     <dependencyManagement>
@@ -48,4 +52,40 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.2.1</version>
+                    <configuration>
+                        <rules>
+                            <bannedDependencies>
+                                <excludes>
+                                    <exclude>
+                                        commons-logging:commons-logging
+                                    </exclude>
+                                </excludes>
+                            </bannedDependencies>
+                        </rules>
+                        <fail>${vlastna}</fail>
+                        <skip>${skipEnforcer}</skip>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>execute</id>
+                            <!-- <phase>validate</phase> --> <!--pise sa ked chcem menit fazu-->
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+<!--                            <configuration>...</configuration>-->
+                        </execution>
+<!--                        <execution>...</execution>-->
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
