--- a/maven-java-0923/pom.xml
+++ b/maven-java-0923/pom.xml
@@ -48,7 +48,7 @@
                 <executions>
                     <execution>
                         <id>check-my-classes</id>
-                        <phase>process-classes</phase>
+<!--                        <phase>process-classes</phase>-->
                         <goals>
                             <goal>enforce</goal>
                         </goals>
@@ -62,6 +62,7 @@
                                 </requireFilesExist>
                             </rules>
                             <fail>true</fail>
+                            <skip>${enforcerSkipHelloWorld}</skip>
                         </configuration>
                     </execution>
                     <!--                        <execution>...</execution>-->
