--- a/maven-java-0923/pom.xml
+++ b/maven-java-0923/pom.xml
@@ -27,12 +27,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>3.0.5.RELEASE</version>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>commons-logging</groupId>-->
-<!--                    <artifactId>commons-logging</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -48,7 +48,7 @@
                 <executions>
                     <execution>
                         <id>check-my-classes</id>
-<!--                        <phase>process-classes</phase>-->
+                        <phase>process-classes</phase>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
