--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
         <maven.compiler.target>18</maven.compiler.target>
         <java.version>18</java.version>
 
-        <enforcer.skip>true</enforcer.skip>
-        <enforcerSkipHelloWorld>${enforcer.skip}</enforcerSkipHelloWorld>
+        <enforcer.skip>false</enforcer.skip>
         <enforcerSkipCommonsLogging>${enforcer.skip}</enforcerSkipCommonsLogging>
+        <enforcerSkipHelloWorld>${enforcer.skip}</enforcerSkipHelloWorld>
     </properties>
 
     <dependencyManagement>
