--- a/maven-java-0923/pom.xml
+++ b/maven-java-0923/pom.xml
@@ -56,8 +56,8 @@
                             <rules>
                                 <requireFilesExist>
                                     <files>
-                                        <file>${project.build.outputDirectory}\HelloWorld.class</file>
-<!--                                        <file>${basedir}\target\classes\HelloWorld.class</file>-->
+                                        <file>${project.build.outputDirectory}\sk.cde.training.HelloWorld.class</file>
+<!--                                        <file>${basedir}\target\classes\sk.cde.training.HelloWorld.class</file>-->
                                     </files>
                                 </requireFilesExist>
                             </rules>
@@ -67,6 +67,25 @@
                     </execution>
                     <!--                        <execution>...</execution>-->
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <phase>install</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>sk.cde.training.HelloWorld</mainClass>
+                    <arguments>
+                        <argument>-abc</argument>
+                    </arguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
