--- a/maven-web-0923/pom.xml
+++ b/maven-web-0923/pom.xml
@@ -58,7 +58,7 @@
                             <resources>
                                 <resource>
                                     <directory>${basedir}/src/main/resources/</directory>
-                                    <filtering>true</filtering>
+                                    <fileNameFiltering>true</fileNameFiltering>
                                 </resource>
                             </resources>
                         </configuration>
