--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,26 @@
         <module>maven-web-0923</module>
 	</modules>
 
+    <description>Toto je nas super Maven projekt!</description>
+
+    <licenses>
+        <license>
+            <name>Apache-2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>Scheidt&amp;Bachmann</name>
+        <url>https://www.scheidt-bachmann.sk/</url>
+    </organization>
+
+    <prerequisites>
+        <maven>3.0.0</maven>
+    </prerequisites>
+
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
